@@ -1,0 +1,9 @@
+{
+  "animation": {
+    "frametime": 10,
+    "frames": [
+      0,
+      1
+    ]
+  }
+}
