@@ -10,7 +10,7 @@
       "tag": "forge:plates/aluminum"
     },
     "f": {
-      "item": "overpowered:focus_lens"
+      "item": "overpowered:scanning_laser"
     },
     "d": {
       "item": "overpowered:data_cable"
